--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,16 @@
 ---
+import Contact from "../components/Contact.astro";
+import Experience from "../components/Experience.astro";
+import Layout from "../components/Layout.astro";
+import Projects from "../components/Projects.astro";
+import Skills from "../components/Skills.astro";
+
 
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="Alisher's Portfolio">
+	<h1>Hi I'm Alisher</h1>
+	<Experience/>
+	<Projects/>
+	<Skills/>
+	<Contact/>
+</Layout>
