added html skeleton, and changed font prior to applying styles

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,5 +1,20 @@
 ---
 ---
 <section id="projects">
-    Projects
+    <h1>Projects</h1>
+    <div>
+        <img/>
+        <h3>Note Taking App</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis recusandae incidunt aperiam ut quibusdam dignissimos, quae tempora. Perferendis aut dolorum neque, nisi adipisci explicabo quo dignissimos ducimus quisquam eos illum.</p>
+    </div>
+    <div>
+        <img/>
+        <h3>DevOps API Utils Chrome extension</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis recusandae incidunt aperiam ut quibusdam dignissimos, quae tempora. Perferendis aut dolorum neque, nisi adipisci explicabo quo dignissimos ducimus quisquam eos illum.</p>
+    </div>
+    <div>
+        <img/>
+        <h3>Fishy Game</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis recusandae incidunt aperiam ut quibusdam dignissimos, quae tempora. Perferendis aut dolorum neque, nisi adipisci explicabo quo dignissimos ducimus quisquam eos illum.</p>
+    </div>
 </section>
