--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Contact from "../components/Contact.astro";
 import Experience from "../components/Experience.astro";
+import Hero from "../components/Hero.astro";
 import Layout from "../components/Layout.astro";
 import Projects from "../components/Projects.astro";
 import Skills from "../components/Skills.astro";
@@ -8,7 +9,7 @@ import Skills from "../components/Skills.astro";
 
 ---
 <Layout title="Alisher's Portfolio">
-	<h1>Hi I'm Alisher</h1>
+	<Hero/>
 	<Experience/>
 	<Projects/>
 	<Skills/>
