made minor updates to projects and skills section

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -22,6 +22,8 @@
                     <span class="tag">React</span>
                     <span class="tag">TypeScript</span>
                     <span class="tag">Markdown</span>
+                    <span class="tag">PostgreSQL</span>
+                    <span class="tag">Express</span>
                 </div>
             </div>
         </div>
@@ -42,7 +44,7 @@
                 <div class="project-tags">
                     <span class="tag">Chrome Extension</span>
                     <span class="tag">Azure DevOps API</span>
-                    <span class="tag">JavaScript</span>
+                    <span class="tag">TypeScript</span>
                 </div>
             </div>
         </div>
@@ -61,8 +63,8 @@
                     An engaging browser-based game featuring smooth animations and interactive gameplay. Demonstrates proficiency in game development, physics simulation, and creative coding techniques.
                 </p>
                 <div class="project-tags">
-                    <span class="tag">Game Dev</span>
-                    <span class="tag">Canvas API</span>
+                    <span class="tag">Godot Game Engine</span>
+                    <span class="tag">2D</span>
                     <span class="tag">Animation</span>
                 </div>
             </div>
